src-errormsg/E11-MissingPatternParens/Plutarch.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E11-MissingPatternParens/Plutarch.hs:33:1: error: [GHC-91938]
    equations for ‘isAmount’ have different numbers of arguments
      /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E11-MissingPatternParens/Plutarch.hs:33:1-31
      /Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E11-MissingPatternParens/Plutarch.hs:34:1-24
   |
33 | isAmount PAmount _ = pcon PTrue
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
